<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#376167"
    android:backgroundTint="#2D42ACE6"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#5CEA3E"
        android:drawableLeft="@drawable/baseline_check_circle_24"
        android:text="@string/btnRegistrarte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="80dp"
        android:background="#3192DC"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="49dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/facebook" />

    <EditText
        android:id="@+id/plaintTextNombres"
        android:layout_width="165dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:backgroundTint="@color/design_default_color_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textNombres2"
        app:layout_constraintStart_toStartOf="@+id/textNombres2"
        app:layout_constraintTop_toBottomOf="@+id/textNombres2"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/plaintTextApellidos"
        android:layout_width="165dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textApellidos"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/textApellidos"
        app:layout_constraintTop_toBottomOf="@+id/textApellidos" />

    <TextView
        android:id="@+id/textRegistrarte"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="REGISTRARTE"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/textRegistrarte"
        app:layout_constraintStart_toStartOf="@+id/textRegistrarte"
        app:layout_constraintTop_toBottomOf="@+id/textRegistrarte"
        app:srcCompat="@drawable/usuario" />

    <EditText
        android:id="@+id/idEmail"
        android:layout_width="145dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textCorreo"
        app:layout_constraintStart_toStartOf="@+id/textCorreo"
        app:layout_constraintTop_toBottomOf="@+id/textCorreo" />

    <TextView
        android:id="@+id/textCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/textCorreo"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textContraseña"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/idEmail"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/idEmail"
        app:layout_constraintTop_toBottomOf="@+id/idEmail" />

    <TextView
        android:id="@+id/textApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:text="@string/textApellidos"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textNombres2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/textNombres"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="143dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textContraseña"
        app:layout_constraintStart_toStartOf="@+id/textContraseña"
        app:layout_constraintTop_toBottomOf="@+id/textContraseña" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/idEmail"
        app:layout_constraintEnd_toStartOf="@+id/idEmail"
        app:layout_constraintTop_toTopOf="@+id/idEmail"
        app:srcCompat="@drawable/correo" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="25dp"
        android:layout_height="27dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
        app:srcCompat="@drawable/contrase_a" />

    <TextView
        android:id="@+id/textFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textFecha"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="146dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="date"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textFecha"
        app:layout_constraintStart_toStartOf="@+id/textFecha"
        app:layout_constraintTop_toBottomOf="@+id/textFecha" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="24dp"
        android:layout_height="27dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
        app:layout_constraintEnd_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toTopOf="@+id/editTextDate"
        app:srcCompat="@drawable/fecha" />

    <TextView
        android:id="@+id/textSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textSexo"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textSexo"
        app:layout_constraintStart_toStartOf="@+id/textSexo"
        app:layout_constraintTop_toBottomOf="@+id/textSexo">

        <RadioButton
            android:id="@+id/radioButtonMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/baseline_male_24"
            android:text="@string/radioButtonMale"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/baseline_female_24"
            android:text="@string/radioButtonFemale"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>